# routes/api.php
@@ -1,12 +1,15 @@
 <?php
 
 use App\Http\Controllers\Api\V1\AuthController;
-use Illuminate\Http\Request;
+use App\Http\Controllers\Api\V1\UserController;
 use Illuminate\Support\Facades\Route;
 
 Route::prefix('v1')->group(function () {
-    
-    Route::post('/register', [AuthController::class, 'store'])->name('auth.store');
-    Route::post('/login', [AuthController::class, 'index'])->name('auth.index');
 
+    //Регистрация авторизация
+    Route::post('/register', [AuthController::class, 'store'])->name('auth.store');
+    Route::get('/login', [AuthController::class, 'index'])->name('auth.index');
+
+    //Пользователи
+    Route::get('/users', [UserController::class, 'index'])->name('users.index');
 });
